--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="css/application.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,7 +19,28 @@
     <![endif]-->
   </head>
   <body>
-    <h1>TortelDruifjes, soon online!</h1>
+    <div class="container">
+      <div class="v-center-holder">
+        <div class="v-center-content">
+          <h1>
+            <a href="http://torteldruifjes.nl/">
+              <img src="/images/logo.png" alt="TortelDruifjes" class="img-responsive" />
+            </a>
+          </h1>
+          <div class="social-links">
+            <a href="mailto:info@torteldruifjes.nl">
+              <i class="fa fa-envelope"></i>
+            </a>
+            <a href="https://www.facebook.com/TortelDruifjes-598478286924236" target="_blank">
+              <i class="fa fa-facebook"></i>
+            </a>
+            <a href="https://instagram.com/torteldruifjes/" target="_blank">
+              <i class="fa fa-instagram"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
